<resources>
    <!-- manifest -->
    <string name="app_name">Movie App</string>
    <string name="detail">Movie Detail</string>

    <!-- Menu Strings -->
    <string name="current_playing">Current Playing</string>
    <string name="sort_by_rating">Sort By Rating</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="sort_by_favorite">Sort By Favorite</string>

    <!-- Detail Activity Strings -->
    <string name="mark_as_favorite">Mark As Favorite</string>
    <string name="empty_trailer">No trailer available!</string>

    <!-- Fail to load -->
    <string name="error">Failed to load data!\nPlease check internet
        \nconnection and try again!</string>

    <!-- Constant Strings to retrieve data -->
    <string name="original_title">original_title</string>
    <string name="image_thumbnail">Image Thumnail</string>
    <string name="over_view">overview</string>
    <string name="vote_average">vote_average</string>
    <string name="release_date">release_date</string>
    <string name="run_time">runtime</string>
    <string name="begin_year">0</string>
    <string name="end_year">4</string>
    <string name="split_column">2</string>
    <string name="videos">videos</string>
    <string name="out_of">/10</string>
    <string name="video_plus_review">videos,reviews</string>
    <string name="append_to_response">append_to_response</string>
    <string name="key">key</string>
    <string name="scheme">https</string>
    <string name="api_key">api_key</string>
    <string name="movie_authority">api.themoviedb.org/3/movie</string>
    <string name="minute">\ min</string>
    <string name="result">results</string>
    <string name="img_url">http://image.tmdb.org/t/p/w185/</string>
    <string name="movie_id">id</string>
    <string name="popular">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="reviews">reviews</string>
    <string name="now_playing">now_playing</string>
    <string name="movie_query_string">query</string>
    <string name="poster_path">poster_path</string>
    <string name="movie_query_loader">2001</string>
    <string name="content">content</string>
    <string name="youtube">https://www.youtube.com/watch?v=</string>
    <string name="youtube_authority">youtube/watch</string>

    <string name="favorite">favorite</string>


    <!-- Movie Utils -->
    <string name="youtube_schmeme_authority">https://img.youtube.com/vi/</string>
    <string name="youtube_jpg_query">/maxresdefault.jpg</string>

    <!-- Review layout strings -->
    <string name="review">review</string>
    <string name="empty_review">No Review Available!</string>
</resources>
