<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="115dp"
        android:layout_height="170dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image_thumbnail"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_release_date"
        style="@style/wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toTopOf="@+id/thumbnail"
        tools:text="@string/release_date" />

    <TextView
        android:id="@+id/tv_run_time"
        style="@style/wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/tv_release_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
        tools:text="@string/run_time" />

    <TextView
        android:id="@+id/tv_rating"
        style="@style/wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_run_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_run_time"
        tools:text="@string/vote_average" />

    <ImageButton
        android:id="@+id/favorite_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_rating"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

</android.support.constraint.ConstraintLayout>